tests/pp-fail/error_directive_esc.fl.0.exp
Error: error_directive_esc.fl(1,1): \error: this is a string
with an escape sequence 
\error "this is a string\nwith an escape sequence"
^                                                  
